pkg/quic/envoy_quic.yaml
# https://paste.googleplex.com/6703370854203392#
# https://github.com/howardjohn/istio/tree/pilot/http3-gateway
# Requires --concurrency 1
layered_runtime:
  layers:
    - name: udp
      static_layer:
        envoy.reloadable_features.prefer_quic_kernel_bpf_packet_routing: true
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: UDP
          address: 0.0.0.0
          port_value: 10000
      udp_listener_config:
        udp_listener_name: quiche_quic_listener
      reuse_port: true
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.quic
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
              downstream_tls_context:
                common_tls_context:
                  alpn_protocols:
                    - h2
                    - http/1.1
                  tls_certificates:
                    # The following self-signed certificate pair is generated using:
                    # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem -days 3650 -nodes -subj '/CN=front-envoy'
                    #
                    # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
                    # via filename. Reference: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
                    #
                    # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
                    # Secret Discovery Service (SDS). Reference: https://www.envoyproxy.io/docs/envoy/latest/configuration/security/secret.
                    certificate_chain:
                      inline_string: |
                        -----BEGIN CERTIFICATE-----
                        MIICqDCCAZACCQCquzpHNpqBcDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtm
[...]
                        m+/R4XnmL4cKQ+5Z
                        -----END CERTIFICATE-----
                    private_key:
                      inline_string: |
                        -----BEGIN PRIVATE KEY-----
                        MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2GdiSpVAFf5aD
[...]
                        q5sGxGrC1RECGB5Zwx2S2ZY=
                        -----END PRIVATE KEY-----
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: HTTP3
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/local"
                          direct_response:
                            status: "200"
                            body: {inline_string: "direct_response: You found it!\n"}
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite_literal: httpbin.org
                            cluster: service_google

                http_filters:
                  - name: envoy.filters.http.router
    - name: listener_1
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      reuse_port: true
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/local"
                          direct_response:
                            status: "200"
                            body: {inline_string: "direct_response: You found it!\n"}
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite_literal: httpbin.org
                            cluster: service_google

                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: service_google
      connect_timeout: 30s
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      respect_dns_ttl: true
      load_assignment:
        cluster_name: service_google
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: httpbin.org
